--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png" />
     <link href="/src/output.css" rel="stylesheet" />
+    <link rel="stylesheet" href="/assets/fonts/Figtree-Italic-VariableFont_wght.ttf" />
     <title>Frontend Mentor | Blog preview card</title>
 
     <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
@@ -21,11 +22,14 @@
     </style>
   </head>
   <body>
+    <div class="container mx-auto bg-[#f4d04e] flex justify-center items-center min-h-screen">
+      <div class="mx-auto flex flex-col justify-center py-4 px-4 bg-white rounded-2xl shadow-[8px_8px_0px_#000000]">
+        <div>
+          <img src="/assets/images/illustration-article.svg" alt="" class="rounded-2xl" />
+        </div>
+      </div>
+    </div>
+    <span class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Syarifah Aisyah</a>.</span>
     Learning Published 21 Dec 2023 HTML & CSS foundations These languages are the backbone of every website, defining structure, content, and presentation. Greg Hooper
-    <p class="text-red-500 bg-amber-950">
-      Lorem ipsum dolor sit amet consectetur adipisicing elit. At veritatis impedit corporis voluptates maiores, inventore laboriosam dignissimos a molestias quis mollitia minus quo. Repellat consequuntur eveniet corrupti expedita
-      reprehenderit quidem.
-    </p>
-    <div class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Your Name Here</a>.</div>
   </body>
 </html>
