--- a/index.html
+++ b/index.html
@@ -21,15 +21,22 @@
       }
     </style>
   </head>
-  <body>
+  <body class="m-2">
     <div class="container mx-auto bg-[#f4d04e] flex justify-center items-center min-h-screen">
       <div class="mx-auto flex flex-col justify-center py-4 px-4 bg-white rounded-2xl shadow-[8px_8px_0px_#000000]">
-        <div>
+        <div class="flex flex-col items-start gap-3">
           <img src="/assets/images/illustration-article.svg" alt="" class="rounded-2xl" />
+          <a href="" class="bg-[#F4D04E] font-[700] rounded-[8px] py-[4px] px-[16px] hover:bg-black hover:text-[#F4D04E] transition duration-500 ease-in-out">Learning</a>
+          <div class="font-medium text-[#121212]">Published 21 Dec 2023</div>
+          <h3 class="hover:text-[#F4D04E] font-bold text-[25px]">HTML & CSS foundations</h3>
+          <p class="text-[#808080] font-normal">
+            These languages are the backbone of every <br />
+            website, defining structure, content, and <br />presentation.
+          </p>
         </div>
       </div>
     </div>
     <span class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Syarifah Aisyah</a>.</span>
-    Learning Published 21 Dec 2023 HTML & CSS foundations These languages are the backbone of every website, defining structure, content, and presentation. Greg Hooper
+    Published 21 Dec 2023 These languages are the backbone of every website, defining structure, content, and presentation. Greg Hooper
   </body>
 </html>
