--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
   </head>
   <body class="m-2">
     <div class="container mx-auto bg-[#f4d04e] flex justify-center items-center min-h-screen">
-      <div class="mx-auto flex flex-col justify-center py-4 px-4 bg-white rounded-2xl shadow-[8px_8px_0px_#000000]">
-        <div class="flex flex-col items-start gap-3">
-          <img src="/assets/images/illustration-article.svg" alt="" class="rounded-2xl" />
+      <div class="mx-auto flex flex-col justify-center py-5 px-5 mb-auto bg-white rounded-2xl shadow-[8px_8px_0px_#000000,-0.5px_-0.5px_0px_#000000]">
+        <div class="flex flex-col items-start gap-4">
+          <img src="/assets/images/illustration-article.svg" alt="" class="rounded-[12px]" />
           <a href="" class="bg-[#F4D04E] font-[700] rounded-[8px] py-[4px] px-[16px] hover:bg-black hover:text-[#F4D04E] transition duration-500 ease-in-out">Learning</a>
           <div class="font-medium text-[#121212]">Published 21 Dec 2023</div>
           <h3 class="hover:text-[#F4D04E] font-bold text-[25px]">HTML & CSS foundations</h3>
@@ -33,10 +33,18 @@
             These languages are the backbone of every <br />
             website, defining structure, content, and <br />presentation.
           </p>
+          <div class="flex flex-row items-center gap-5">
+            <img src="/assets/images/image-avatar.webp" alt="" class="h-[48px]" />
+            <span class="font-bold">Greg Hooper</span>
+          </div>
         </div>
       </div>
     </div>
-    <span class="attribution">Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. Coded by <a href="#">Syarifah Aisyah</a>.</span>
-    Published 21 Dec 2023 These languages are the backbone of every website, defining structure, content, and presentation. Greg Hooper
+    <footer class="text-center text-[11px] bg-[#f4d04e]">
+      <span class="text-black">Challenge by</span>
+      <a href="https://www.frontendmentor.io?ref=challenge" target="_blank" class="text-[#142883] underline"> Frontend Mentor</a>.
+      <span class="text-black">Coded by</span>
+      <a href="#" class="text-[#142883] underline">Syarifah Aisyah</a>.
+    </footer>
   </body>
 </html>
